Implemented queue cancellation.
